Desafio 2/files/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: dbs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: postgresql
    spec:
     # nodeSelector:
       # host: app
      containers:
        - args:
            - --work_mem=10MB
          image: 'postgres:14'
          livenessProbe:
            failureThreshold: 10
            periodSeconds: 15
            timeoutSeconds: 10
          name: postgresql
          ports:
            - containerPort: 5432
          resources: 
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "1000m"  
              memory: "2000Mi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-claim
      restartPolicy: Always
      volumes:
        - name: postgresql-claim
          persistentVolumeClaim:
            claimName: postgresql-claim
