Desafio 2/files/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: dbs
spec:
  ports:
    - name: "tcp"
      port: 5432
      targetPort: 5432
