Desafio 2/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - apps.com.br
      secretName: tls-apps
  rules:        #começo das regras de dns#
  - http:
      paths:           
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app1
            port:
              number: 6001
    host: app1.apps.com.br
  - http:
      paths:           
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app2
            port:
              number: 7001
    host: app2.apps.com.br
